test/should_pass/enum_003.grg
actions enum_003 using enum_model_003;

rule r {
	pattern {
		a:A -b:B-> a;
	}
	modify {
		eval {
			a.e = b.e;
			b.i = a.e;
			b.i = (int)a.e;
			b.e = te::a;
		}
	}
}

