test/should_fail/cast_002.grg
actions cast_002 using attrib_model_001, enum_model_003;

rule r {
	pattern {
		k:A -l:B-> k;
	}
	modify {
		eval {
			l.e = (te2) k.e;
		}
	}
}
